--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -25,7 +25,7 @@
             <div ng-show="wall.statuses.length>0" ng-if="wall.wallOptions.showStatistics" class="col-md-4">
                 <div class="box box-default">
                     <div class="box-header with-border">
-                        <h3 class="box-title">Tweets frequency</h3>
+                        <h3 class="box-title">TWEETS FREQUENCY</h3>
                         <div class="box-tools pull-right">
                             <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                         </div>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="box box-default">
                     <div class="box-header with-border">
-                        <h3 class="box-title">Top Stats</h3>
+                        <h3 class="box-title">LEADERBORD</h3>
                         <div class="box-tools pull-right">
                             <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                         </div>
@@ -46,16 +46,76 @@
                     <div class="box-body">
                         <div class="row" style="text-align: center;">
                             <div class="col-xs-6">
-                                <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas>
-                                <h5>Top Hashtags</h5>
+                                <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
+                                <h4>Top Hashtags</h4>
+                                <!-- table.table>tbody>(tr>((td>div.leaderboard-item{{{wall.topHashtagsData[$@0][0]}}})+(td>div.leaderboard-item{{{wall.topHashtagsData[$@0][1]}}})))*3 -->
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topHashtagsData[0][0]}}</div>
+                                            </td>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topHashtagsData[0][1]}}</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topHashtagsData[1][0]}}</div>
+                                            </td>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topHashtagsData[1][1]}}</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topHashtagsData[2][0]}}</div>
+                                            </td>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topHashtagsData[2][1]}}</div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                             <div class="col-xs-6">
-                                <canvas class="chart chart-pie" options="wall.topTwitterersOptions" labels="wall.topTwitterersLabels" data="wall.topTwitterersData"></canvas>
-                                <h5>Top Twitterers</h5>
+                                <!-- <canvas class="chart chart-pie" options="wall.topTwitterersOptions" labels="wall.topTwitterersLabels" data="wall.topTwitterersData"></canvas> -->
+                                <h4>Top Twitterers</h4>
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topTwitterersData[0][0]}}</div>
+                                            </td>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topTwitterersData[0][1]}}</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topTwitterersData[1][0]}}</div>
+                                            </td>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topTwitterersData[1][1]}}</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topTwitterersData[2][0]}}</div>
+                                            </td>
+                                            <td>
+                                                <div class="leaderboard-item">{{wall.topTwitterersData[2][1]}}</div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col-xs-6">
-                                <canvas class="chart chart-pie" options="wall.topMentionsOptions" labels="wall.topMentionsLabels" data="wall.topMentionsData"></canvas>
-                                <h5>Top Mentions</h5>
+                                <!-- <canvas class="chart chart-pie" options="wall.topMentionsOptions" labels="wall.topMentionsLabels" data="wall.topMentionsData"></canvas> -->
+                                <!-- <h4>Top Mentions</h4> -->
+                                <!-- table.table>tbody>(tr>((td>div.leaderboard-item{{{wall.topMentionsData[$@0][0]}}})+(td>div.leaderboard-item{{{wall.topMentionsData[$@0][1]}}})))*3 -->
                             </div>
                         </div>
                     </div>
