--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,7 +1,7 @@
 <div class="tweet original-tweet js-stream-tweet js-actionable-tweet js-profile-popup-actionable js-original-tweet with-user-actions" ng-attr-id="{{data.id_str}}"  ng-click="toggleDetail($event)" >
         <div class="context">
         </div>
-        <div class="content">
+        <div class="content" style="margin-left: 10%;">
             <div class="stream-item-header">
                 <a ng-href="{{'https://twitter.com/' + data.user.screen_name}}" target="_blank" class="account-group js-account-group js-action-profile js-user-profile-link js-nav">
                     <img fallback-status-id="data.user.screen_name" class="avatar js-action-profile-avatar" 
