Homepage contains tweets from the people user follows

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -82,7 +82,7 @@
 <div role="main" aria-labelledby="content-main-heading" class="content-main top-timeline-tweetbox" id="timeline" style="float:left;margin-left: 5%;margin-right: 5%;">
     <div id="above-timeline-prompt"></div>
     <div class="timeline-tweet-box">
-        <div ng-repeat="status in root.twitterStatuses.data" status open-swipe="search.openSwipe" data="status"></div> 
+        <div ng-repeat="status in root.twitterFriends.data" status open-swipe="search.openSwipe" data="status"></div> 
   </div>
 </div>
 <div class="dashboard dashboard-right" style="margin-right:14px;margin-left:14px;">
