--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1763,7 +1763,7 @@
 				background-color: #fff;
 				border: 1px solid #e1e8ed;
 				border-radius: 3px;
-				padding: 8px 5px;
+				padding: 8px;
 				display: inline-block;
 				margin-bottom: 20px;
 			}
