--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -23,6 +23,47 @@
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
             </div>
             <div ng-show="wall.statuses.length>0" ng-if="wall.wallOptions.showStatistics" class="col-md-4">
+                <h4>LEADERBOARD</h4>
+                <div class="row">
+                    <img class="histogram-loader" ng-hide="wall.topTwitterersData"  src="images/loading.gif">
+                    <div class="col-xs-7">
+                        <!-- <canvas class="chart chart-pie" options="wall.topTwitterersOptions" labels="wall.topTwitterersLabels" data="wall.topTwitterersData"></canvas> -->
+                        <h4 ng-show="wall.topTwitterersData">Top Twitterers</h4>
+                        <table class="table table-bordered leaderboard">
+                            <tbody>
+                                <tr class="leaderboard-item" ng-repeat="obj in wall.topTwitterersData">
+                                    <td>
+                                        <img ng-src="http://avatars.io/twitter/{{obj[0]}}" alt="">
+                                        <span ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="label leaderboard-label">{{obj[1]}}</span>
+                                    </td>
+                                    <td>
+                                        <h5>@{{obj[0]}}</h5>
+                                    </td>
+                                    <!-- <td>
+                                                <div class="leaderboard-item">{{obj[1]}}</div>
+                                            </td> -->
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-xs-4">
+                        <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
+                        <h4 ng-show="wall.topTwitterersData">Top Hashtags</h4>
+                        <!-- table.table>tbody>(tr>((td>div.leaderboard-item{{{wall.topHashtagsData[$@0][0]}}})+(td>div.leaderboard-item{{{wall.topHashtagsData[$@0][1]}}})))*3 -->
+                        <table class="table">
+                            <tbody>
+                                <tr class="leaderboard-item" ng-repeat="obj in wall.topHashtagsData">
+                                    <td>
+                                        <div ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="leaderboard-count">{{obj[1]}}</div>
+                                    </td>
+                                    <td>
+                                        <h5>#{{obj[0]}}</h5>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
                 <div class="box box-default">
                     <div class="box-header with-border">
                         <h3 class="box-title">TWEETS FREQUENCY</h3>
@@ -32,94 +73,11 @@
                     </div>
                     <div class="box-body">
                         <div class="row">
+                            <img class="histogram-loader" ng-hide="wall.histogram2"  src="images/loading.gif">
                             <canvas class="chart chart-bar" options="wall.histogramOptions" labels="wall.labels" data="wall.histogram2"></canvas>
                         </div>
                     </div>
                 </div>
-                <div class="box box-default">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">LEADERBORD</h3>
-                        <div class="box-tools pull-right">
-                            <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                        </div>
-                    </div>
-                    <div class="box-body">
-                        <div class="row" style="text-align: center;">
-                            <div class="col-xs-6">
-                                <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
-                                <h4>Top Hashtags</h4>
-                                <!-- table.table>tbody>(tr>((td>div.leaderboard-item{{{wall.topHashtagsData[$@0][0]}}})+(td>div.leaderboard-item{{{wall.topHashtagsData[$@0][1]}}})))*3 -->
-                                <table class="table">
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topHashtagsData[0][0]}}</div>
-                                            </td>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topHashtagsData[0][1]}}</div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topHashtagsData[1][0]}}</div>
-                                            </td>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topHashtagsData[1][1]}}</div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topHashtagsData[2][0]}}</div>
-                                            </td>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topHashtagsData[2][1]}}</div>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="col-xs-6">
-                                <!-- <canvas class="chart chart-pie" options="wall.topTwitterersOptions" labels="wall.topTwitterersLabels" data="wall.topTwitterersData"></canvas> -->
-                                <h4>Top Twitterers</h4>
-                                <table class="table">
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topTwitterersData[0][0]}}</div>
-                                            </td>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topTwitterersData[0][1]}}</div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topTwitterersData[1][0]}}</div>
-                                            </td>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topTwitterersData[1][1]}}</div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topTwitterersData[2][0]}}</div>
-                                            </td>
-                                            <td>
-                                                <div class="leaderboard-item">{{wall.topTwitterersData[2][1]}}</div>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <!-- <canvas class="chart chart-pie" options="wall.topMentionsOptions" labels="wall.topMentionsLabels" data="wall.topMentionsData"></canvas> -->
-                                <!-- <h4>Top Mentions</h4> -->
-                                <!-- table.table>tbody>(tr>((td>div.leaderboard-item{{{wall.topMentionsData[$@0][0]}}})+(td>div.leaderboard-item{{{wall.topMentionsData[$@0][1]}}})))*3 -->
-                            </div>
-                        </div>
-                    </div>
-                </div>                
             </div>
             <div ng-show="wall.statuses.length<=0 && !wall.showEmpty" class="col-md-12">
                 <div class="loading-redirect" style="text-align: center;"><span id="bull1">&bull;</span><span id="bull2">&bull;</span><span id="bull3">&bull;</span></div>
