--- a/app/views/wall/templates/coa.html
+++ b/app/views/wall/templates/coa.html
@@ -1,17 +1,18 @@
 <div ng-attr-id="{{data.id_str}}" class="coa coa-simple">
     <img class="avatar spinner" onError="this.onerror=null;this.src='/images/anon_200x200.png';" ng-src="{{data.user.profile_image_url_https | biggerProfileImage}}" alt="user-images">
-    <div class="coa-content">
+    <div class="coa-content row">
         <!-- Main content -->
-        <p class="coa-content-text" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
+        <p class="coa-content-text" ng-class="data.images.length>0?'col-xs-9':'col-xs-12'" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
         <!-- Images -->
+        <img alt="" class="col-xs-3" ng-if="data.images.length>0" ng-src="{{data.images[0]}}">
         <!--         <div data-ng-click="open(data.id_str);" ng-class="{'images-wrapper': true, 'showdetail': showdetail}" ng-if="data.images_count"> -->
-        <div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick">
+       <!--  <div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick">
             <div class="masonry-brick" ng-repeat="image in data.images">
                 <img ng-click="wall.open()" class="masonry-image spinner" ng-src="{{image}}" alt="A masonry brick">
             </div>
-        </div>
+        </div> -->
         <!-- Metadata -->
-        <div class="metadata">
+        <div class="metadata col-xs-12">
             <a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
             <span class="screen-name">{{ "@hbhb" + data.user.screen_name}}</span>
             <span><i class="fa fa-twitter"></i></span>
